feat: initial config for api keys
