# core/api/oas_schemas_gen.go
@@ -11,6 +11,31 @@ import (
 	"github.com/go-faster/errors"
 )
 
+type ApiKey struct {
+	APIKey string
+	Roles  []string
+}
+
+// GetAPIKey returns the value of APIKey.
+func (s *ApiKey) GetAPIKey() string {
+	return s.APIKey
+}
+
+// GetRoles returns the value of Roles.
+func (s *ApiKey) GetRoles() []string {
+	return s.Roles
+}
+
+// SetAPIKey sets the value of APIKey.
+func (s *ApiKey) SetAPIKey(val string) {
+	s.APIKey = val
+}
+
+// SetRoles sets the value of Roles.
+func (s *ApiKey) SetRoles(val []string) {
+	s.Roles = val
+}
+
 // Request body for logging in.
 // Ref: #/components/schemas/AuthLogin
 type AuthLogin struct {
